welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value ||
  if (vacation) || (weekend) {true}
                ^sleepIn:2: error: not found: value weekend
  if (vacation) || (weekend) {true}
                    ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vacation) || (weekend) {true}
  ^